# api_router/authentication.go
@@ -30,9 +30,12 @@ func Register(context *gin.Context) {
 	}
 
 	findedUser, findedUserErr := model.FindUserByUsername(user.Username)
+	findedEmail, emailErr := model.FindUserByEmail(user.Email)
 
 	if findedUser.Username != "" {
 		context.JSON(http.StatusUnprocessableEntity, gin.H{"error": "user already exist"})
+	} else if findedEmail.Email != "" {
+		context.JSON(http.StatusUnprocessableEntity, gin.H{"error": "email already exist"})
 	} else {
 		savedUser, err := user.Save()
 		if err != nil {
@@ -50,31 +53,20 @@ func Register(context *gin.Context) {
 		context.JSON(http.StatusBadRequest, gin.H{"error": findedUserErr.Error()})
 	}
 
-}
-
-func AddEntry(context *gin.Context) {
-	var input model.Entry
-
-	if err := context.ShouldBindJSON(&input); err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
+	if emailErr != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": emailErr.Error()})
 	}
-	user, err := helper.CurrentUser(context)
-	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	input.UserID = user.ID
-	savedEntry, err := input.Save()
-
-	if err != nil {
-		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
-		return
-	}
-	context.JSON(http.StatusCreated, gin.H{"data": savedEntry})
 
 }
 
+// PostUser             godoc
+// @Summary      Login
+// @Description  Takes a user JSON and store in DB. Return saved JSON.
+// @Tags         auth
+// @Produce      json
+// @Param        user  body      model.AuthenticationInput  true  "User JSON"
+// @Success      200   {object}  model.JwtResp
+// @Router       /auth/login [post]
 func Login(context *gin.Context) {
 	var input model.AuthenticationInput
 
@@ -104,4 +96,27 @@ func Login(context *gin.Context) {
 	}
 
 	context.JSON(http.StatusOK, gin.H{"jwt": jwt})
+}
+
+func AddEntry(context *gin.Context) {
+	var input model.Entry
+
+	if err := context.ShouldBindJSON(&input); err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	user, err := helper.CurrentUser(context)
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	input.UserID = user.ID
+	savedEntry, err := input.Save()
+
+	if err != nil {
+		context.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	context.JSON(http.StatusCreated, gin.H{"data": savedEntry})
+
 }
